[gd_scene load_steps=4 format=3 uid="uid://b0tv17ivqoc1f"]

[ext_resource type="Script" path="res://minijeu_1/ampi_game.gd" id="1_p2ery"]
[ext_resource type="PackedScene" uid="uid://cvgk6uh1iitqp" path="res://minijeu_1/bacterias.tscn" id="2_8apun"]
[ext_resource type="PackedScene" uid="uid://dgyxn155ejql7" path="res://minijeu_1/circle.tscn" id="3_trp5a"]

[node name="AMPI_Game" type="Node"]
script = ExtResource("1_p2ery")

[node name="BackGround" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="bacterias" parent="." instance=ExtResource("2_8apun")]
position = Vector2(566, 303)

[node name="circle" parent="." instance=ExtResource("3_trp5a")]
position = Vector2(553, 324)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="TEXT" type="CanvasLayer" parent="."]

[node name="time" type="Label" parent="TEXT"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -355.0
offset_top = -1.0
offset_right = -37.0
offset_bottom = 139.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 200
horizontal_alignment = 2

[node name="win_state" type="Label" parent="TEXT"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[node name="explanation" type="Label" parent="TEXT"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -254.0
offset_top = 137.0
offset_right = 254.0
offset_bottom = 213.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.784314, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.5
offset_top = -35.5
offset_right = 75.5
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="Label" type="Label" parent="Button"]
layout_mode = 0
offset_left = -383.5
offset_top = -206.5
offset_right = 539.5
offset_bottom = -62.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.784314, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 50
text = "careful ! bacterias are attacking your culture. 
Find the good tube and give them"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Button"]
layout_mode = 0
offset_left = -368.5
offset_top = 122.5
offset_right = 518.5
offset_bottom = 266.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.784314, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 50
text = " \"up\" touch : select and move a tube "
horizontal_alignment = 1

[node name="Button2" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -77.0
offset_right = 92.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Restart"

[node name="Button3" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -184.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "to menu"

[node name="Label" type="Label" parent="Button3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "coins :"

[connection signal="area_entered" from="bacterias" to="." method="_on_bacterias_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
